--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "react-slider": "^2.0.4",
+    "use-pagination-firestore": "^0.6.0",
     "use-sound": "^4.0.1",
     "web-vitals": "^2.1.4"
   },
