--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
     "chart.js": "^4.0.1",
+    "date-fns": "^2.29.3",
     "firebase": "^9.13.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
