--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "universal-cookie": "^4.0.4",
     "use-pagination-firestore": "^0.6.0",
     "use-sound": "^4.0.1",
+    "verify-paddle-webhook": "^1.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
