--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "chart.js": "^4.0.1",
     "date-fns": "^2.29.3",
     "firebase": "^9.13.0",
+    "firebase-admin": "^11.5.0",
+    "firebase-functions": "^4.2.1",
+    "php-serialize": "^4.0.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
     "react-bootstrap-icons": "^1.10.2",
