--- a/functions/package.json
+++ b/functions/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "firebase-admin": "^10.3.0",
     "firebase-functions": "^3.18.0",
-    "php-serialize": "^4.0.2"
+    "php-serialize": "^4.0.2",
+    "verify-paddle-webhook": "^1.1.0"
   },
   "devDependencies": {
     "eslint": "^8.9.0",
