--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
+    "react-player": "^2.12.0",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
