--- a/package.json
+++ b/package.json
@@ -3,14 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@calumk/editorjs-codeflask": "^1.0.9",
+    "@editorjs/editorjs": "^2.26.5",
+    "@editorjs/header": "^2.7.0",
+    "@editorjs/list": "^1.8.0",
+    "@editorjs/nested-list": "^1.3.0",
+    "@editorjs/paragraph": "^2.9.0",
+    "@editorjs/table": "^2.2.1",
+    "@editorjs/underline": "^1.1.0",
     "@google-pay/button-react": "^3.0.5",
     "@mui/icons-material": "^5.10.15",
+    "@sotaproject/strikethrough": "^1.0.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
     "chart.js": "^4.0.1",
     "date-fns": "^2.29.3",
+    "editorjs-text-color-plugin": "^2.0.2",
     "firebase": "^9.13.0",
     "firebase-admin": "^11.5.0",
     "firebase-functions": "^4.2.1",
@@ -22,6 +32,7 @@
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
+    "react-editor-js": "^2.1.0",
     "react-player": "^2.12.0",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.4.3",
@@ -58,5 +69,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@editorjs/checklist": "^1.4.0",
+    "@editorjs/code": "^2.8.0",
+    "@editorjs/link": "^2.5.0",
+    "@editorjs/marker": "^1.3.0",
+    "@editorjs/quote": "^2.5.0",
+    "editorjs-change-case": "^0.0.3",
+    "editorjs-table": "^1.4.10"
   }
 }
