--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
     "react-editor-js": "^2.1.0",
+    "react-paginate": "^8.2.0",
     "react-player": "^2.12.0",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.4.3",
