--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@editorjs/underline": "^1.1.0",
     "@google-pay/button-react": "^3.0.5",
     "@mui/icons-material": "^5.10.15",
+    "@paypal/react-paypal-js": "^7.8.3",
     "@sotaproject/strikethrough": "^1.0.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -34,6 +35,7 @@
     "react-draggable": "^4.4.5",
     "react-editor-js": "^2.1.0",
     "react-paginate": "^8.2.0",
+    "react-paypal-button-v2": "^2.6.3",
     "react-player": "^2.12.0",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.4.3",
