--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "async_hooks": "^1.0.0",
     "bootstrap": "^5.2.3",
     "chart.js": "^4.0.1",
     "date-fns": "^2.29.3",
@@ -45,6 +46,7 @@
     "universal-cookie": "^4.0.4",
     "use-pagination-firestore": "^0.6.0",
     "use-sound": "^4.0.1",
+    "util": "^0.12.5",
     "verify-paddle-webhook": "^1.1.0",
     "web-vitals": "^2.1.4"
   },
