env update for security

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 GENERATE_SOURCEMAP=false
 CLIENT_ID= ATV2Co73t1tlgpv3pR_tKU7RQVo4CO1cpwLj-KQ4XFuVDzi1BfDKpcl83XnVeE1ynQZOYuDnIHcx2fB2
+SECRET=EFW45r53knvyP18tZY2mFVWhGod9a4YpfM6R4kftC9_WzRHTpkV9FFgHHZDPlfDn3HpIpxpxmMj-DbFp
