--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-scripts": "5.0.1",
     "react-slider": "^2.0.4",
     "react-spotify-player": "^1.0.4",
+    "react-timer-hook": "^3.0.5",
     "universal-cookie": "^4.0.4",
     "use-pagination-firestore": "^0.6.0",
     "use-sound": "^4.0.1",
