--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "react-bootstrap-icons": "^1.10.2",
     "react-chartjs-2": "^5.0.1",
     "react-circular-progressbar": "^2.1.0",
+    "react-confetti-explosion": "^2.1.2",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
     "react-editor-js": "^2.1.0",
+    "react-helmet": "^6.1.0",
     "react-paginate": "^8.2.0",
     "react-paypal-button-v2": "^2.6.3",
     "react-player": "^2.12.0",
