--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "editorjs-text-color-plugin": "^2.0.2",
     "firebase": "^9.13.0",
     "firebase-admin": "^11.7.0",
-    "firebase-functions": "^4.3.1",
+    "firebase-tools": "^12.3.1",
     "php-serialize": "^4.0.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
